fix: navigation z-index (scss layer)

--- a/front/src/pages/layout/top-navigation.scss
+++ b/front/src/pages/layout/top-navigation.scss
@@ -1,6 +1,7 @@
 @use '../../styles/colors';
 @use '../../styles/sizes';
 @use '../../styles/blocks';
+@use '../../styles/layers';
 
 .top-navigation {
 	position: fixed;
@@ -10,6 +11,7 @@
 	height: sizes.$top-bar-height-px;
 	box-shadow: 0 3px 0 #11111110;
 	@include blocks.top-bar-bg;
+	@include layers.zIndex('top-bar');
 
 	.top-navigation__items {
 		margin: 0 auto;
